<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginPage">
    <TextView
        android:id="@+id/apptitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:fontFamily="@font/sukarblack"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/EntityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Entity Title"
        android:layout_below="@+id/apptitle"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:fontFamily="@font/sukarblack"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColor="@color/newMent"
        android:textStyle="bold"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/companyLogo"
        android:layout_below="@id/EntityTitle"
        android:layout_centerHorizontal="true"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_below="@+id/companyLogo"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:textColorHint="#A7A7A7"
        app:boxStrokeColor="#EAEAEE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_below="@id/txtUsername"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/password"
        android:textColorHint="#A7A7A7"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="#EAEAEE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPassword"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:id="@+id/store"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_below="@id/txtPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/store"
        android:layout_marginBottom="10dp"
        >

        <AutoCompleteTextView
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"></AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/login"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="#3BA8BE"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/store"
      />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang"
        android:textSize="20sp"
        android:padding="5dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Login"
        android:id="@+id/langswitch"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/langswitch"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/applogo">

        </ImageView>
    </RelativeLayout>
</RelativeLayout>